refactor: standardize Service and Controller layers with Clean Code
- Extract security logic from Service to SecurityUtils for better SoC
- Implement DTO-based mapping using record constructors (User/Company)
- Centralize resource validation and "soft delete" logic in Services
- Apply declarative security with @PreAuthorize in Controller layer