@@ -1,16 +1,18 @@
 package com.sched.api.service;
 
 import com.sched.api.domain.Company;
+import com.sched.api.domain.User;
 import com.sched.api.dto.request.CompanyRequest;
 import com.sched.api.dto.response.CompanyResponse;
 import com.sched.api.exception.ResourceNotFoundException;
 import com.sched.api.repository.CompanyRepository;
+import com.sched.api.utils.SecurityUtils;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.access.AccessDeniedException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,41 +22,50 @@ public class CompanyService {
 
     @Transactional(readOnly = true)
     public List<CompanyResponse> getAll() {
-        return companyRepository.findAll().stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
+        return companyRepository.findAllByDeletedFalse().stream()
+                .map(CompanyResponse::new)
+                .toList();
     }
 
     @Transactional(readOnly = true)
     public CompanyResponse getById(Long id) {
-        Company company = companyRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Company not found with id: " + id));
-
-        return mapToResponse(company);
+        Company company = findActiveCompanyOrThrow(id);
+        return new CompanyResponse(company);
     }
 
     @Transactional
     public CompanyResponse update(Long id, CompanyRequest dto) {
-        Company company = companyRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Company not found with id: " + id));
+        User authUser = SecurityUtils.getAuthenticatedUser();
+        Company company = findActiveCompanyOrThrow(id);
+
+        validateCompanyAccess(authUser, company);
 
         company.setName(dto.name());
         company.setCnpj(dto.cnpj());
 
-        return mapToResponse(companyRepository.save(company));
+        return new CompanyResponse(companyRepository.save(company));
     }
 
     @Transactional
     public void delete(Long id) {
-        Company company = companyRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Company not found with id: " + id));
+        User authUser = SecurityUtils.getAuthenticatedUser();
+        Company company = findActiveCompanyOrThrow(id);
+
+        validateCompanyAccess(authUser, company);
 
         company.setDeleted(true);
 
         companyRepository.save(company);
     }
 
-    private CompanyResponse mapToResponse(Company company) {
-        return new CompanyResponse(company.getId(), company.getName(), company.getCnpj(), company.getCreatedAt());
+    private Company findActiveCompanyOrThrow(Long id) {
+        return companyRepository.findByIdAndDeletedFalse(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Company not found or inactive with id: " + id));
+    }
+
+    private void validateCompanyAccess(User authUser, Company targetCompany) {
+        if (!authUser.getCompany().getId().equals(targetCompany.getId())) {
+            throw new AccessDeniedException("You do not have permission to access another company's data.");
+        }
     }
 }
